<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/tamanioImagen"
        android:layout_marginTop="@dimen/marginBase"
        android:src="@drawable/calculator"></ImageView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginBase">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:text="@string/n1Label"
            android:textSize="@dimen/tamanioLetra">

        </TextView>

        <EditText
        android:id="@+id/n1Txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="@dimen/tamanioLetra"
        android:inputType="number">

         </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginBase2"
        android:orientation="horizontal">


     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/n2Label"
         android:layout_weight="2"
         android:gravity="center_horizontal"
         android:textSize="@dimen/tamanioLetra">

     </TextView>

     <EditText
         android:id="@+id/n2Txt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:textSize="@dimen/tamanioLetra"
         android:inputType="number">

     </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginBase2"
        android:orientation="horizontal">
        <Button
            android:onClick="sumar"
            android:layout_width="match_parent"
            android:text="@string/sumarBtn"
            android:background="@color/colorSuma"
            android:textColor="@color/primary_light"
            android:layout_weight="1"
            android:textSize="@dimen/tamanioLetra"
            android:layout_height="@dimen/tamanioBtn"></Button>

        <Button

            android:layout_width="match_parent"
            android:onClick="resta"
            android:text="@string/restaBtn"
            android:background="@color/colorResta"
            android:textColor="@color/primary_light"
            android:layout_weight="1"
            android:textSize="@dimen/tamanioLetra"
            android:layout_height="@dimen/tamanioBtn"></Button>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginBase2"
        android:orientation="horizontal">
        <Button
            android:onClick="multiplicar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/tamanioBtn"
            android:text="@string/multiplicarBtn"
            android:background="@color/colorMultiplicar"
            android:layout_weight="1"
            android:textSize="@dimen/tamanioLetra"
            android:textColor="@color/primary_light"></Button>
        <Button

            android:layout_width="match_parent"
            android:onClick="dividir"
            android:layout_height="@dimen/tamanioBtn"
            android:text="@string/dividirBtn"
            android:background="@color/colorDividir"
            android:layout_weight="1"
            android:textSize="@dimen/tamanioLetra"
            android:textColor="@color/primary_light"></Button>


    </LinearLayout>

</LinearLayout>